Fix uuid to id and start of prediction stack
