# controllers/v1/QAModelController.py
@@ -6,7 +6,7 @@ from services.QAModelService import QAModelService
 qa_model_service = QAModelService()
 
 
-def create_qa_model(request: QAModelCreateRequest) -> QAModelResponse:
+def create_qa_model(request: dict) -> QAModelResponse:
     '''Controller function to process a model create request'''
     
     dto = QAModelCreateRequest(request)
@@ -22,11 +22,10 @@ def create_qa_model(request: QAModelCreateRequest) -> QAModelResponse:
         return None, 404
 
 
+def read_qa_model(id_: str) -> QAModelResponse:
+    '''Controller function to get a given model based on id'''
 
-def read_qa_model(uuid: str) -> QAModelResponse:
-    '''Controller function to get a given model based on uuid'''
-
-    model = qa_model_service.read_qa_model_by_uuid(uuid)
+    model = qa_model_service.read_qa_model_by_id(id_)
 
     # Model is found and return the DTO or return None
     if model is not None:
